# end-to-end-iot-ai-pipeline

./: .gitignore  README.md  env.example  pyproject.toml
api/: Dockerfile  db.py  main.py  requirements.txt  schemas.py
config/: codex.sqlite3  codex.sqlite3-shm  codex.sqlite3-wal
consumer/: __init__.py  alerts.py  consumer.py  db.py  requirements.txt
dashboard/: Dockerfile  app.py  requirements.txt
dashboard/models/: isolation_forest_20260113233804.joblib
infra/: docker-compose.yaml
infra/mlflow/: Dockerfile
migrations/: 0001_init.sql
ml/: __init__.py  requirements.txt  train_model.py
ml/models/: isolation_forest.joblib
producer/: requirements.txt  sensor_simulator.py
shared/: __init__.py  logging.py  migrations.py  retry.py  settings.py
tests/: test_api_health.py  test_scoring.py  test_settings.py
